--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ repositories {
 }
 
 dependencies {
-	runtimeOnly 'org.postgresql:postgresql:42.1.4'
+	runtimeOnly 'org.postgresql:postgresql'
+	implementation "org.flywaydb:flyway-core"
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
